add new routs for tsd
